prevent scroll bar from shifting content

--- a/orca-beta-front-end/src/styles/styles.css
+++ b/orca-beta-front-end/src/styles/styles.css
@@ -1,3 +1,6 @@
+html {
+    overflow-y: scroll;
+  }
 .my-div {
     height: 100px;
     text-align: center;
